fixed some mobile responsive layout issues.

--- a/static/css/content-landing.css
+++ b/static/css/content-landing.css
@@ -19,43 +19,51 @@ h2{
 
 
 .content-info-left{
-    width: 60%;
     max-width:500px;
+    min-width:400px;
     float: left;
     margin-left:-30px;
+    margin-right:0;
+    margin-top:10px;
     padding-left: 40px;
-    padding-right:15px;
+    padding-right: 15px;
     background:black;
     background: linear-gradient(to right, black, #191919 70% ,rgba(255,0,0,0));
     min-height:350px;
     position: relative;
-    margin-right:0
-    position:relative;
 
 }
 
 .seen-it-container {
   position: absolute;
   bottom: 5px;
-
 }
 
 .content-info-right{
-    width:38%
+    /*width:225px;*/
+/*    min-width:225px;
+    max-width:225px;*/
     margin: 0;
     padding 0;
     position: absolute;
-    right: 20;
+    /*right: 5;*/
+    right:0;
 }
 
+@media only screen and (max-width: 750px) {
+    .content-info-right{
+        opacity:0.2;
+    }
+
+}
 
 .img-landing-title {
   margin:0px;
   padding:0px;
   height:350px;
-  min-height:100%;
-  max-width:100%;
-  width:auto;
+  /*max-height:100%;
+  max-width:100%;*/
+  width: auto;
 
 }
 
@@ -120,6 +128,12 @@ h2{
   height: 233px;
 }
 
+@media only screen and (max-width: 500px) {
+  .rep-color-band{
+    height: 260px;
+  }
+}
+
 .category-container{
   position:relative;
   padding-bottom: 10px;
@@ -130,6 +144,7 @@ h2{
 }
 
 .category-title-container{
+    display:inline-block;
 }
 
 .category-title{
@@ -269,6 +284,7 @@ h2{
      color:black;
      z-index:2001;
      height:25px;
+     line-height:25px;
      width:90px;
      left:213;
      top:90;
@@ -980,7 +996,9 @@ text-tweet-block{
 
 .hashtag-container{
   display:flex;
+  overflow:auto;
   flex-direction: row;
+  flex-wrap: nowrap;
   border-radius: 5px;
   width: auto;
   border: 2px inset #092551;
@@ -998,6 +1016,7 @@ text-tweet-block{
   width: auto;
   height: 40px;
   cursor:default;
+  white-space: nowrap;
 }
 
 .hashtag-item:hover, .tweet-item:hover{
